--- a/user-frontend/package.json
+++ b/user-frontend/package.json
@@ -26,9 +26,11 @@
         "react-scripts": "5.0.1",
         "react-scroll": "^1.9.0",
         "react-slick": "^0.30.2",
+        "react-toastify": "^10.0.5",
         "redux-persist": "^6.0.0",
         "slick-carousel": "^1.8.1",
         "tailwind-scrollbar-hide": "^1.1.7",
+        "toast": "^0.5.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
